--- a/support/appsettings.json
+++ b/support/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "MongoSettings": {
+    "ConnectionString": "",
+    "DatabaseName": ""
+  },
   "AllowedHosts": "*"
 }
