--- a/accounts/K8s/svc.yaml
+++ b/accounts/K8s/svc.yaml
@@ -3,10 +3,10 @@ apiVersion: v1
 metadata:
   name: accounts-api
 spec: 
-  type: LoadBalancer
+  type: ClusterIP
   ports:
     - name: api
       port: 80
       targetPort: http
   selector:
-    app: accounts-api
+    app: api-accounts
